{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 110,
  "lineage": "e68f7959-91fc-1b47-06f1-9f3522762944",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06be72ee7d78ce5cb",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-03729b15b0561e506",
            "domain": "vpc",
            "id": "eipalloc-06be72ee7d78ce5cb",
            "instance": "i-022238f7bb8d58ac6",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0643f3fa7afc4a156",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-3-226-200-1.compute-1.amazonaws.com",
            "public_ip": "3.226.200.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "one",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "one",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_network_interface.web_server_nic",
            "aws_security_group.allow_web",
            "aws_subnet.prod_vpc_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:053500961007:instance/i-022238f7bb8d58ac6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022238f7bb8d58ac6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "main-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0643f3fa7afc4a156"
              }
            ],
            "primary_network_interface_id": "eni-0643f3fa7afc4a156",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "3.226.200.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bad5955f803c7d7a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0518845b46c1e364f",
            "tags": {
              "Name": "web_server_instance",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "web_server_instance",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0fa1a3c68f9436b41"
            ]
          },
          "dependencies": [
            "aws_network_interface.web_server_nic",
            "aws_security_group.allow_web",
            "aws_subnet.prod_vpc_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:internet-gateway/igw-02f7f743210a02058",
            "id": "igw-02f7f743210a02058",
            "owner_id": "053500961007",
            "tags": {
              "Name": "prod_igw",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "prod_igw",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "vpc_id": "vpc-0d9a31bbb689522f5"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:network-interface/eni-0643f3fa7afc4a156",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c4911b50452d7e3b",
                "device_index": 0,
                "instance": "i-022238f7bb8d58ac6"
              }
            ],
            "id": "eni-0643f3fa7afc4a156",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "12:b0:92:d7:6d:65",
            "owner_id": "053500961007",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0fa1a3c68f9436b41"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0518845b46c1e364f",
            "tags": {
              "Name": "web_server_nic",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "web_server_nic",
              "Warning": "Created by terraform. Dont alter or delete"
            }
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.prod_vpc_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:route-table/rtb-07087ee0031f8cffb",
            "id": "rtb-07087ee0031f8cffb",
            "owner_id": "053500961007",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f7f743210a02058",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02f7f743210a02058",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_route_table",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "prod_route_table",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a31bbb689522f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_vpc_subnet_1_to_prod_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074ba058b7569f8cf",
            "route_table_id": "rtb-07087ee0031f8cffb",
            "subnet_id": "subnet-0518845b46c1e364f"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_route_table",
            "aws_subnet.prod_vpc_subnet_1",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:security-group/sg-0fa1a3c68f9436b41",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa1a3c68f9436b41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "053500961007",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "allow_web",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9a31bbb689522f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_vpc_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:subnet/subnet-0518845b46c1e364f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0518845b46c1e364f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "053500961007",
            "tags": {
              "AvailabilityZone": "us-east-1a",
              "Name": "prod_vpc_subnet_1",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "AvailabilityZone": "us-east-1a",
              "Name": "prod_vpc_subnet_1",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "vpc_id": "vpc-0d9a31bbb689522f5"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:053500961007:vpc/vpc-0d9a31bbb689522f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e146c8c203e400aa",
            "default_route_table_id": "rtb-01b16e7cdf570a618",
            "default_security_group_id": "sg-080d4de2000164e55",
            "dhcp_options_id": "dopt-4b771f31",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d9a31bbb689522f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01b16e7cdf570a618",
            "owner_id": "053500961007",
            "tags": {
              "Name": "prod_vpc",
              "Warning": "Created by terraform. Dont alter or delete"
            },
            "tags_all": {
              "Name": "prod_vpc",
              "Warning": "Created by terraform. Dont alter or delete"
            }
          }
        }
      ]
    }
  ]
}